PatternPropertiesDialog: add author and license widgets
implements MADR 0003.

Those widgets do already display the corresponding values of the pattern but do not write them yet

--- a/src/gui/src/PatternPropertiesDialog_UI.ui
+++ b/src/gui/src/PatternPropertiesDialog_UI.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>315</width>
-    <height>277</height>
+    <height>439</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,13 +40,13 @@
         <x>0</x>
         <y>0</y>
         <width>313</width>
-        <height>275</height>
+        <height>437</height>
        </rect>
       </property>
       <property name="minimumSize">
        <size>
         <width>311</width>
-        <height>274</height>
+        <height>434</height>
        </size>
       </property>
       <layout class="QGridLayout" name="gridLayout">
@@ -65,11 +65,39 @@
             <widget class="LCDDisplay" name="patternNameTxt"/>
            </item>
            <item>
-            <widget class="QLabel" name="versionLabel">
-            </widget>
+            <widget class="QLabel" name="versionLabel"/>
            </item>
            <item>
             <widget class="LCDSpinBox" name="versionSpinBox"/>
+           </item>
+           <item>
+            <widget class="QLabel" name="authorLabel"/>
+           </item>
+           <item>
+            <widget class="LCDDisplay" name="authorTxt"/>
+           </item>
+           <item>
+            <widget class="QLabel" name="licenseLabel">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>20</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="LCDCombo" name="licenseComboBox">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="LCDDisplay" name="licenseStringTxt"/>
            </item>
            <item>
             <widget class="QLabel" name="label_2">
