CommonStrings: commonize author and license labels
this way we can use existing translations for `PatternPropertiesDialog` as well as slightly reduce the number of required translations for new languages

--- a/src/gui/src/SongPropertiesDialog_UI.ui
+++ b/src/gui/src/SongPropertiesDialog_UI.ui
@@ -73,15 +73,12 @@
         <widget class="LCDSpinBox" name="versionSpinBox"/>
        </item>
        <item>
-        <widget class="QLabel" name="TextLabel1_2">
+        <widget class="QLabel" name="authorLabel">
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>20</height>
           </size>
-         </property>
-         <property name="text">
-          <string>Author</string>
          </property>
         </widget>
        </item>
@@ -89,15 +86,12 @@
         <widget class="LCDDisplay" name="authorTxt"/>
        </item>
        <item>
-        <widget class="QLabel" name="TextLabel1_3">
+        <widget class="QLabel" name="licenseLabel">
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>20</height>
           </size>
-         </property>
-         <property name="text">
-          <string>License</string>
          </property>
         </widget>
        </item>
