--- a/src/gui/src/SoundLibrary/DrumkitPropertiesDialog_UI.ui
+++ b/src/gui/src/SoundLibrary/DrumkitPropertiesDialog_UI.ui
@@ -286,15 +286,12 @@
             </widget>
            </item>
            <item row="2" column="0">
-            <widget class="QLabel" name="label_2">
+            <widget class="QLabel" name="authorLabel">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
-             </property>
-             <property name="text">
-              <string>Author</string>
              </property>
             </widget>
            </item>
